Clean up install script

--- a/install
+++ b/install
@@ -1,15 +1,31 @@
 #!/usr/bin/env bash
 
+# Bail if there's an error
 set -e
 
-CONFIG="install.conf.yaml"
-DOTBOT_DIR="dotbot"
+set_up_dotbot () {
+    CONFIG="install.conf.yaml"
+    DOTBOT_DIR="dotbot"
 
-DOTBOT_BIN="bin/dotbot"
-BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+    DOTBOT_BIN="bin/dotbot"
+    BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
-cd "${BASEDIR}"
-git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
-git submodule update --init --recursive "${DOTBOT_DIR}"
+    cd "${BASEDIR}"
+    git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
+    git submodule update --init --recursive "${DOTBOT_DIR}"
 
-"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+    "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+}
+
+install_apps () {
+    echo -e "Installing Homebrew applications:"
+
+    # ~/.Brewfile was set up by Dotbot
+    brew bundle install --global
+}
+
+
+# Let's begin!
+set_up_dotbot
+install_apps
+# Fin
