--- a/install
+++ b/install
@@ -7,7 +7,7 @@ SYSTEM_TYPE=$(uname -s) # Get system type - Linux / macOS (Darwin)
 
 set_up_dotbot () {
     CONFIG="install.conf.yaml"
-    DOTBOT_DIR="dotbot"
+    DOTBOT_DIR="lib/dotbot"
 
     DOTBOT_BIN="bin/dotbot"
     BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
